# inference_api_learning

./: .env.example  .gitignore  CLAUDE.md  README.md  build.bat  build.sh  requirements.txt  run.py  start.bat  start.sh
.claude/: settings.local.jsln
app/: config.py  main.py
app/routers/: models.py
app/schemas/: __init__.py
app/services/: __init__.py  generation.py  model_manager.py
backend/: pyproject.toml  run.py
backend/.claude/: settings.local.json
backend/app/: config.py  main.py
backend/app/routers/: __init__.py  chat.py  conversations.py  models.py  tools.py
backend/app/schemas/: chat.py
backend/app/services/: __init__.py  agent.py  generation.py  image_utils.py  memory.py  model_manager.py  tool_calling.py
backend/app/services/strategies/: __init__.py  base.py  detection.py  fallback.py  gemma4.py  llama.py  mistral.py  qwen.py
backend/app/tools/: __init__.py  base.py  web_fetch.py  web_search.py
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ChatPanel.tsx  ConversationList.tsx  ModelPanel.tsx
